Integration bugs fixed

--- a/client/src/styles/TestPage.css
+++ b/client/src/styles/TestPage.css
@@ -1,4 +1,5 @@
-/* .stream-area{
-    position: relative;
-    right: 20px;
-} */
+.stream-area{
+    border: black 2px solid;
+    width: 17rem;
+    height: 12.8rem;
+}
