change layout of test page

--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -1,3 +1,8 @@
 .content {
     min-height: 80vh;
 }
+
+.slogan{
+    font-family: 'Hedvig Letters Serif', serif;
+    font-family: 'Mooli', sans-serif;
+}
