--- a/client/src/styles/TestPage.css
+++ b/client/src/styles/TestPage.css
@@ -1,8 +1,14 @@
 .stream-area{
     border: black 2px solid;
-    width: 17rem;
-    height: 12.8rem;
+    width: 24rem;
+    height: 13.3rem;
     position: fixed;
     top: 1rem;
     right: 0rem;
+}
+
+.stream-area img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
