--- a/client/src/styles/TestPage.css
+++ b/client/src/styles/TestPage.css
@@ -5,10 +5,11 @@
     position: fixed;
     top: 1rem;
     right: 0rem;
+
 }
 
 .stream-area img{
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    background-size: cover;
 }
